--- a/linux-updates.yml
+++ b/linux-updates.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: localhost
+- hosts: all
   connection: local
   become: true
   become_user: root
@@ -23,6 +23,3 @@
         post_reboot_delay: 30
         test_command: uptime
       when: reboot_required_file.stat.exists
-
-
-      
