--- a/linux-updates.yml
+++ b/linux-updates.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: all
-  connection: local
+- hosts: pi
   become: true
   become_user: root
   tasks:
@@ -12,7 +11,7 @@
 
     - name: Check if a reboot is needed on all servers
       register: reboot_required_file
-      stat: path=/var/run/reboot-required get_md5=no
+      stat: path=/var/run/reboot-required get_md5=no  
 
     - name: Reboot the box if kernel updated
       reboot:
