--- a/run-watchtower.yml
+++ b/run-watchtower.yml
@@ -4,6 +4,7 @@
     - name: Execute an inline Bash script
       shell: |
         #!/bin/bash
+        ls -ltr
         cd /projects/docker-watchtower
         docker compose  -f watchtower-compose.yml up --pull always
 
